--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,9 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+                
+    - name: Golangci-lint
+      uses: golangci/golangci-lint-action@v6.1.1
 
     - name: Test
       run: go test -v ./...
