--- a/.air.toml.example
+++ b/.air.toml.example
@@ -4,7 +4,7 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/main"
+  bin = "./tmp/main --command start-server --id DefaultServer --server-port 9002"
   cmd = "go build -o tmp/main -buildvcs=false ./cmd"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
